# exchange-rs

./: .env  Cargo.toml  architecture.md  readme.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/dto/: mod.rs
backend/src/routes/: auth.rs
backend/src/services/: auth.rs  mod.rs
db/: Cargo.toml
db/migrations/: 20241207000000_initial_schema.sql
db/src/: connection.rs  lib.rs  models.rs
db/src/repositories/: balance.rs  mod.rs  order.rs  user.rs
