[workspace]
members = [
    "backend",
    "db", 
]
resolver = "2"

[workspace.dependencies]
# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
] }
rust_decimal = { version = "1.33", features = ["serde","db-postgres"] }
sqlx-postgres = { version = "0.7", features = ["rust_decimal"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["serde", "v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Environment
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
