[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal
db = { path = "../db" }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Auth
bcrypt = "0.15"
jsonwebtoken = "9"

# Workspace deps
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
