[package]
name = "db"
version = "0.1.0"
edition = "2024"



[dependencies]
sqlx = { workspace = true }
sqlx-postgres = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rust_decimal={workspace = true}
